# nRF9160CommsWithThingsboard

./: CMakeLists.txt  Kconfig  README.md  nrf9160dk_nrf9160_ns.overlay  prj.conf
src/: SystemConfig.h  main.c
src/LedHandler/: CMakeLists.txt  LedHandler.c  LedHandler.h
src/Mqtt_Comm/: CMakeLists.txt  mqtt_comm.c  mqtt_comm.h  user_app.c  user_app.h
src/Network_Manager/: CMakeLists.txt  lte_network.c  lte_network.h
src/storage/: CMakeLists.txt  storage.c  storage.h
